--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-TJrCHtpbEkKgvg7mZ9tljB4m4Pc/Y/T5m7VjoxEh5/Z7V5M5x1iQ2ST9eYRvv8DnxsCtA0wKpOCfpybvt8/e1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -90,6 +91,7 @@
                         <div class="featured-text text-center text-lg-left">
                             <h4>29 Januari 2023</h4>
                             <p class="text-black-50 mb-0">Main ke pangalengan gatau lupa nama tempatnya.</p>
+                            <div class="small text-black-50"><a href="https://goo.gl/maps/ySJpwiRjnT1j8tECA?coh=178571&entry=tt">Lokasi</a></div>
                         </div>
                     </div>
                 </div>
@@ -117,10 +119,107 @@
                         <div class="featured-text text-center text-lg-left">
                             <h4>18 Februari 2023</h4>
                             <p class="text-black-50 mb-0">Udah fofotoan lanjut ke museum yeah.</p>
+                            <div class="small text-black-50"><a href="https://goo.gl/maps/hJxHthkUmmSB2fNE6?coh=178571&entry=tt">Lokasi</a></div>
                         </div>
                     </div>
                 </div>
             </div>
+            <table class="container table" style="margin-bottom: 50px; margin-top: 50px;">
+                <thead>
+                  <tr>
+                    <th scope="col">No.</th>
+                    <th scope="col">Wishlist</th>
+                    <th scope="col">Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Museum date</td>
+                    <td><i class="fas fa-check"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Pecel lele date</td>
+                    <td><i class="fas fa-check"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Mixue date</td>
+                    <td><i class="fas fa-check"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Photobox</td>
+                    <td><i class="fas fa-check"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Cooking date</td>
+                    <td><i class="fas fa-check"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Cinema date</td>
+                    <td><i class="fas fa-check"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Timezone</td>
+                    <td><i class="fas fa-times"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Maskeran</td>
+                    <td><i class="fas fa-times"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Ke jogja</td>
+                    <td><i class="fas fa-times"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Ke pantai</td>
+                    <td><i class="fas fa-times"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Hiking</td>
+                    <td><i class="fas fa-times"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Pengen ke dufan cenah</td>
+                    <td><i class="fas fa-times"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Joll pengen ke kebun binatang</td>
+                    <td><i class="fas fa-times"></i>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Nonton konser</td>
+                    <td><i class="fas fa-times"></i>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+    
         </section>
         
         <!-- Contact-->
@@ -144,6 +243,7 @@
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
                                 <div class="small text-black-50"><a href="#!">mfirmanf135@gmail.com</a></div>
+                                <div class="small text-black-50"><a href="#!">nissanurfadilah19@gmail.com</a></div>
                             </div>
                         </div>
                     </div>
@@ -159,15 +259,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
-                </div>
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Your Website 2023</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; FNN 2023</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
